# autoclick

./: .gitignore  AdvancedBackgroundAutoClicker.spec  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  windows-build-and-test.md
scripts/: build.ps1  install-deps.ps1  verify.ps1
src/autoclicker/: __init__.py  __main__.py  app.py
src/autoclicker/domain/: models.py
src/autoclicker/services/: app_logging.py  click_engine.py  config_store.py  hotkey_service.py  window_service.py
src/autoclicker/ui/: hotkey_edit.py  main_window.py  theme.py
tests/: test_app_logging.py  test_config_store.py  test_models.py  test_window_service_matching.py
