[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-background-autoclicker"
version = "0.1.0"
description = "Windows background auto-clicker MVP built with PySide6 and Win32 APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<7",
    "pywin32>=306",
    "keyboard>=0.13.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
autoclicker = "autoclicker.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

